// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Property component should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 47rem;
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-1 {
  min-width: 6rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: calc(50% - 2rem);
  margin-right: 1.25rem;
  max-width: calc(50% - 4rem);
  padding-left: 0.5rem;
}

.emotion-2 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-3 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-3:hover {
  color: black;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="ms-TextField emotion-1 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-111"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField0"
                placeholder=""
                type="text"
                value="Propp"
              />
            </div>
          </div>
        </div>
        <div
          class="ms-Dropdown-container root-121"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ms-Dropdown dropdown-122"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown5"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-153"
              id="Dropdown5-option"
            >
              textLayer2, textLayer3
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          class="emotion-2"
        >
          <button
            aria-label="delete.property"
            class="ms-Button ms-Button--icon emotion-3 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.property"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-4 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 47rem;
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-1 {
  min-width: 6rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: calc(50% - 2rem);
  margin-right: 1.25rem;
  max-width: calc(50% - 4rem);
  padding-left: 0.5rem;
}

.emotion-2 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-3 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-3:hover {
  color: black;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="ms-TextField emotion-1 root-110"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-111"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-112"
              id="TextField0"
              placeholder=""
              type="text"
              value="Propp"
            />
          </div>
        </div>
      </div>
      <div
        class="ms-Dropdown-container root-121"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="ms-Dropdown dropdown-122"
          data-is-focusable="true"
          data-ktp-target="true"
          id="Dropdown5"
          role="combobox"
          tabindex="0"
        >
          <span
            aria-invalid="false"
            class="ms-Dropdown-title title-153"
            id="Dropdown5-option"
          >
            textLayer2, textLayer3
          </span>
          <span
            class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
          >
            <i
              aria-hidden="true"
              class="ms-Dropdown-caretDown caretDown-142"
              data-icon-name="ChevronDown"
            >
              
            </i>
          </span>
        </div>
      </div>
      <div
        class="emotion-2"
      >
        <button
          aria-label="delete.property"
          class="ms-Button ms-Button--icon emotion-3 root-143"
          data-is-focusable="true"
          data-testid="delete-icon"
          title="delete.property"
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-144"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden="true"
              class="ms-Icon root-105 emotion-4 ms-Button-icon icon-146"
              data-icon-name="StatusCircleErrorX"
              style="font-family: \\"FabricMDL2Icons-9\\";"
            >
              
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Property component should render options correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 47rem;
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-2 {
  min-width: 6rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: calc(50% - 2rem);
  margin-right: 1.25rem;
  max-width: calc(50% - 4rem);
  padding-left: 0.5rem;
}

.emotion-3 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-4 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4:hover {
  color: black;
}

<body
    class="emotion-0"
  >
    <div
      aria-hidden="true"
    >
      <div
        class="emotion-1"
      >
        <div
          class="ms-TextField emotion-2 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-111"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField9"
                placeholder=""
                type="text"
                value="Propp"
              />
            </div>
          </div>
        </div>
        <div
          aria-owns="Dropdown14-list"
          class="ms-Dropdown-container root-121"
        >
          <div
            aria-controls="Dropdown14-list"
            aria-expanded="true"
            aria-haspopup="listbox"
            class="ms-Dropdown is-open dropdown-154"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown14"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-155"
              id="Dropdown14-option"
            >
              textLayer2, textLayer3
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
          <span
            class="ms-layer"
          />
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.property"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.property"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      id="fluent-default-layer-host"
      style="position: fixed; z-index: 1000000;"
    >
      <div
        class="ms-Layer ms-Layer--fixed root-170"
        data-portal-element="true"
      >
        <div
          class="ms-Fabric ms-Layer-content content-172"
        >
          <div
            aria-modal="true"
            class=""
            role="dialog"
            style="outline: none;"
          >
            <div
              aria-hidden="false"
              class="ms-Panel is-open ms-Panel--hasCloseButton root-158"
            >
              <div
                class="ms-Overlay overlay-174"
              />
              <div
                class="ms-Panel-main main-160"
              >
                <div
                  aria-hidden="true"
                  data-is-focus-trap-zone-bumper="true"
                  data-is-visible="true"
                  style="pointer-events: none; position: fixed;"
                  tabindex="0"
                />
                <div
                  class="ms-Panel-contentInner contentInner-163"
                >
                  <div
                    class="ms-Panel-scrollableContent scrollableContent-166"
                    data-is-scrollable="true"
                  >
                    <div
                      class="ms-Panel-commands commands-161"
                      data-is-visible="true"
                    >
                      <div
                        class="ms-Panel-navigation navigation-162"
                      >
                        <button
                          aria-label="Close"
                          class="ms-Button ms-Panel-closeButton ms-PanelAction-close ms-Button--icon root-175"
                          data-is-focusable="true"
                          data-is-visible="true"
                          title="Close"
                          type="button"
                        >
                          <span
                            class="ms-Button-flexContainer flexContainer-144"
                            data-automationid="splitbuttonprimary"
                          >
                            <i
                              aria-hidden="true"
                              class="ms-Icon root-105 emotion-6 ms-Button-icon icon-146"
                              data-icon-name="Cancel"
                              style="font-family: \\"FabricMDL2Icons\\";"
                            >
                              
                            </i>
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      class="ms-Panel-content content-167"
                    >
                      <div
                        class="dropdownItemsWrapper-128"
                        tabindex="0"
                      >
                        <div
                          aria-multiselectable="true"
                          class="ms-FocusZone emotion-7 ms-Dropdown-items dropdownItems-129"
                          data-focuszone-id="FocusZone23"
                          id="Dropdown14-list"
                          role="listbox"
                        >
                          <div
                            class="ms-Checkbox is-enabled ms-Dropdown-item is-multi-select dropdownItem-177"
                          >
                            <input
                              aria-posinset="1"
                              aria-selected="false"
                              aria-setsize="3"
                              class="input-178"
                              data-index="0"
                              data-is-focusable="true"
                              data-ktp-execute-target="true"
                              id="Dropdown14-list0"
                              role="option"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              class="ms-Checkbox-label label-179"
                              for="Dropdown14-list0"
                            >
                              <div
                                class="ms-Checkbox-checkbox checkbox-180"
                                data-ktp-target="true"
                              >
                                <i
                                  aria-hidden="true"
                                  class="ms-Checkbox-checkmark checkmark-183"
                                  data-icon-name="CheckMark"
                                >
                                  
                                </i>
                              </div>
                              <span
                                class="ms-Dropdown-optionText dropdownOptionText-137"
                              >
                                textLayer1
                              </span>
                            </label>
                          </div>
                          <div
                            class="ms-Checkbox is-checked is-enabled ms-Dropdown-item is-multi-select dropdownItemSelected-184"
                          >
                            <input
                              aria-posinset="2"
                              aria-selected="true"
                              aria-setsize="3"
                              checked=""
                              class="input-178"
                              data-index="1"
                              data-is-focusable="true"
                              data-ktp-execute-target="true"
                              id="Dropdown14-list1"
                              role="option"
                              tabindex="-1"
                              type="checkbox"
                            />
                            <label
                              class="ms-Checkbox-label label-179"
                              for="Dropdown14-list1"
                            >
                              <div
                                class="ms-Checkbox-checkbox checkbox-185"
                                data-ktp-target="true"
                              >
                                <i
                                  aria-hidden="true"
                                  class="ms-Checkbox-checkmark checkmark-187"
                                  data-icon-name="CheckMark"
                                >
                                  
                                </i>
                              </div>
                              <span
                                class="ms-Dropdown-optionText dropdownOptionText-137"
                              >
                                textLayer2
                              </span>
                            </label>
                          </div>
                          <div
                            class="ms-Checkbox is-checked is-enabled ms-Dropdown-item is-multi-select dropdownItemSelected-184"
                          >
                            <input
                              aria-posinset="3"
                              aria-selected="true"
                              aria-setsize="3"
                              checked=""
                              class="input-178"
                              data-index="2"
                              data-is-focusable="true"
                              data-ktp-execute-target="true"
                              id="Dropdown14-list2"
                              role="option"
                              tabindex="-1"
                              type="checkbox"
                            />
                            <label
                              class="ms-Checkbox-label label-179"
                              for="Dropdown14-list2"
                            >
                              <div
                                class="ms-Checkbox-checkbox checkbox-185"
                                data-ktp-target="true"
                              >
                                <i
                                  aria-hidden="true"
                                  class="ms-Checkbox-checkmark checkmark-187"
                                  data-icon-name="CheckMark"
                                >
                                  
                                </i>
                              </div>
                              <span
                                class="ms-Dropdown-optionText dropdownOptionText-137"
                              >
                                textLayer3
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  data-is-focus-trap-zone-bumper="true"
                  data-is-visible="true"
                  style="pointer-events: none; position: fixed;"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 47rem;
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-1 {
  min-width: 6rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: calc(50% - 2rem);
  margin-right: 1.25rem;
  max-width: calc(50% - 4rem);
  padding-left: 0.5rem;
}

.emotion-2 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-3 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-3:hover {
  color: black;
}

<div
    aria-hidden="true"
  >
    <div
      class="emotion-0"
    >
      <div
        class="ms-TextField emotion-1 root-110"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-111"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-112"
              id="TextField9"
              placeholder=""
              type="text"
              value="Propp"
            />
          </div>
        </div>
      </div>
      <div
        aria-owns="Dropdown14-list"
        class="ms-Dropdown-container root-121"
      >
        <div
          aria-controls="Dropdown14-list"
          aria-expanded="true"
          aria-haspopup="listbox"
          class="ms-Dropdown is-open dropdown-154"
          data-is-focusable="true"
          data-ktp-target="true"
          id="Dropdown14"
          role="combobox"
          tabindex="0"
        >
          <span
            aria-invalid="false"
            class="ms-Dropdown-title title-155"
            id="Dropdown14-option"
          >
            textLayer2, textLayer3
          </span>
          <span
            class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
          >
            <i
              aria-hidden="true"
              class="ms-Dropdown-caretDown caretDown-142"
              data-icon-name="ChevronDown"
            >
              
            </i>
          </span>
        </div>
        <span
          class="ms-layer"
        />
      </div>
      <div
        class="emotion-2"
      >
        <button
          aria-label="delete.property"
          class="ms-Button ms-Button--icon emotion-3 root-143"
          data-is-focusable="true"
          data-testid="delete-icon"
          title="delete.property"
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-144"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden="true"
              class="ms-Icon root-105 emotion-4 ms-Button-icon icon-146"
              data-icon-name="StatusCircleErrorX"
              style="font-family: \\"FabricMDL2Icons-9\\";"
            >
              
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
